--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -1,11 +1,16 @@
 # ================================
 # Initialization
 # ================================
+# TODO: Move work bin/ and .env files into its own loading path
 export PATH=$HOME/bin:$PATH
 export PATH=$HOME/.dotfiles/bin:$PATH
 
+{{ if eq .chezmoi.os "darwin" }}
 # brew
-eval "$(/opt/homebrew/bin/brew shellenv)" # macOS
+if [ ! -f /opt/homebrew/bin/brew ]; then
+  eval "$(/opt/homebrew/bin/brew shellenv)"
+fi
+{{ end }}
 
 # zellij
 eval "$(zellij setup --generate-auto-start zsh)"
@@ -28,6 +33,11 @@ export VISUAL="nvim"
 # ================================
 source $HOME/.dotfiles/setup/init.zsh
 source $HOME/.dotfiles/aliases/init.zsh
+
+{{ if eq .chezmoi.hostname "M25013" }}
+source $HOME/.dotfiles/ruby/init.zsh
+source $HOME/.dotfiles/work/init.zsh
+{{ end }}
 
 # To customize prompt, run `p10k configure` or edit ~/.p10k.zsh.
 source ~/.powerlevel10k/powerlevel10k.zsh-theme
