--- a/dot_zshrc.tmpl
+++ b/dot_zshrc.tmpl
@@ -34,7 +34,7 @@ export VISUAL="nvim"
 source $HOME/.dotfiles/setup/init.zsh
 source $HOME/.dotfiles/aliases/init.zsh
 
-{{ if eq .chezmoi.hostname "M25013" }}
+{{ if eq .chezmoi.hostname "fer-work" }}
 source $HOME/.dotfiles/ruby/init.zsh
 source $HOME/.dotfiles/work/init.zsh
 {{ end }}
